--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>element组件调试</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_840458_ymzoyifmat.css">
 </head>
 <body>
 <div id="app"></div>
